Set up React Query

--- a/.env
+++ b/.env
@@ -5,3 +5,7 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mysql://root:MyPassword@localhost:3306/issue-tracker"
+NEXTAUTH_URL="http://localhost:3000/"
+NEXTAUTH_SECRET="E1nAvDqMHTQWu51e35mk8xLpIEFW1HbgAl6VMgadA9U="
+GOOGLE_CLIENT_ID="174157349696-i8btvk0ebf7bk74d19gvki5489drvjp4.apps.googleusercontent.com"
+GOOGLE_CLIENT_SECRET="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"
